--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
              
               <table align="center" width="60%">
                   <tr>
-                      <td style=" font-size: 22px"> Види:</td>
+                      <td style=" font-size: 22px; color: white"> Види:</td>
             <td><a style="color: white; font-size: 22px" href="https://gamestore.com.ua/igry/playstation-4_shuterstreljalka.html">Шутеры </a></td>
             <td width="20%"> <a style="color: white; font-size: 22px" href="https://www.gamepark.ru/playstation4/games/cat-108/"> Приключения (бродилки)</a> </td>
             <td> <a style="color: white; font-size: 22px" href="https://game-shop.com.ua/ua/category/igryi-dlya-playstation-4/1/_filter_89[0]=621">HOROR</a> </td>
@@ -40,6 +40,7 @@
 </p>
 <img src="https://ixbt.online/gametech/covers/2023/03/08/nova-filepond-qdprVy.jpg?w=948"width="25%" height="250px">
             </main>
+    <br>
             <footer style="background-color: black">
                 <br>
                 <p style="color:yellow;"> Sony Group Corporation, «Со́ни» (яп. ソニー・グループ株式会社 Сони Гурупу: кабусики-гайся) — японская транснациональная корпорация со штаб-квартирой в Токио. Является одним из крупнейших в мире производителей потребительской и профессиональной электроники.</p>
